--- a/.github/workflows/python3.7.yml
+++ b/.github/workflows/python3.7.yml
@@ -1,4 +1,4 @@
-name: Gpytranslate CI
+name: Python 3.7 compatibility
 
 on:
   push:
@@ -10,14 +10,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Python 3.9
+      - name: Set up Python 3.7
         uses: actions/setup-python@v1
         with:
-          python-version: 3.9
+          python-version: 3.7
 
       - name: Install Gpytranslate
-        run: |
-          python setup.py install
+        run: python setup.py install
 
       - name: Run tests
         run: |
