--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Install Gpytranslate
         run: |
           python setup.py install
+      - name: "Install pytest"
+        run: python -m pip install pytest-asyncio
 
       - name: Run tests
         run: |
