--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           python-version: "${{ matrix.version }}"
       - name: "Install Gpytranslate"
-        run: python setup.py install
+        run: python -m pip install .
       - name: "Install pytest"
         run: python -m pip install pytest-asyncio
       - name: "Run tests"
