--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,11 @@ build-backend = "hatchling.build"
 
 [project]
 name = "gpytranslate"
-version = "1.5.0"
-dynamic = ["dependencies"]
+version = "1.5.1"
+dependencies = [
+    "httpx",
+    "aiofiles",
+]
 
 authors = [
   { name="Davide Galilei", email="davidegalilei2018@gmail.com" },
@@ -26,6 +29,3 @@ classifiers = [
 [project.urls]
 "Homepage" = "https://github.com/DavideGalilei/gpytranslate"
 "Bug Tracker" = "https://github.com/DavideGalilei/gpytranslate/issues"
-
-[tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
